# RetroStreamer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  build_windows.ps1  build_windows.sh
Controller/: ARCHITECTURE.md
Controller/client/: gui.hpp  media_receiver.hpp
Controller/common/: controller_state.hpp  serialization.hpp
Controller/host/: input_router.hpp  session_server.hpp  virtual_gamepad.hpp
client/: controller_manager.hpp  input_sender.hpp  session_client.hpp
common/: media.hpp  protocol.hpp
deploy/flatpak/: README.md  io.github.ArisenPhoenix.ArchStreamer.desktop  io.github.ArisenPhoenix.ArchStreamer.metainfo.xml  io.github.ArisenPhoenix.ArchStreamer.yml
deploy/lan-sim/: Dockerfile  README.md  docker-compose.yml
deploy/srm/: README.md
deploy/vm-client/: 99-ds4-no-audio.rules  README.md  attach-ds4-evdev.sh  attach-ds4.sh  cold-attach-ds4-ehci.sh  cold-attach-ds4.sh  fix-host-vm-audio.sh  fix-vm-usb-ehci-ds4.sh  guest-audio-check.sh  guest-bootstrap.sh  host-setup.sh  open-console.sh
host/: media_server.hpp  retroarch_process.hpp  seat_manager.hpp
include/client/: audio_playback_device.hpp  catalog_cache.hpp  client_app.hpp  controller_backend.hpp  controller_manager.hpp  game_filter.hpp  gstreamer_media_pipeline.hpp  gstreamer_media_platform.hpp  gstreamer_media_receiver.hpp  gstreamer_media_types.hpp  gstreamer_probe.hpp  gstreamer_synced_media_session.hpp  gui.hpp  input_sender.hpp  media_receiver.hpp  posix_gstreamer_media_platform.hpp  sdl2_controller_backend.hpp  session_client.hpp  session_service.hpp  windows_gstreamer_media_platform.hpp
include/common/: addresses.hpp  art_transfer.hpp  catalog_paths.hpp  catalog_presenter.hpp  cli_common.hpp  controller_normalization.hpp  controller_state.hpp  discovery.hpp  game_assets.hpp  media.hpp  participant_role.hpp  posix_child_process.hpp  protocol.hpp  serialization.hpp  sha256.hpp  steam_art_import.hpp  time.hpp  udp_socket.hpp
include/common/platform/: default_platform.hpp  paths.hpp  posix_process.hpp  posix_socket.hpp  process_utils.hpp  windows_process.hpp  windows_socket.hpp
include/host/: game_catalog.hpp  game_catalog_scanner.hpp  gpu_select.hpp  gstreamer_media_server.hpp  host_app.hpp  host_app_config.hpp  host_launch_planner.hpp  host_session_helpers.hpp  input_router.hpp  libretro_core_registry.hpp  linux_uinput_gamepad.hpp  local_controller_bridge.hpp  media_capture.hpp  media_server.hpp  network_input_receiver.hpp  posix_retroarch_process.hpp  retroarch_config_writer.hpp  retroarch_process.hpp  retroarch_resolve.hpp  save_profile.hpp  seat_manager.hpp  session_control_monitor.hpp  session_lobby.hpp  session_server.hpp  session_service.hpp  virtual_gamepad.hpp  virtual_joypad_resolve.hpp
include/host/platform/: default_host_platform.hpp
include/tools/: cli.hpp  host_runner_app.hpp  session_client_app.hpp  session_client_cli.hpp
scripts/: apply-firewall.sh  build-flatpak.sh  ensure_srm_steam_layout.sh  install-srm.sh  install_gst.sh  lan-sim-smoke.sh  launch-srm.sh  sync_srm_art_into_catalog.sh
src/client/: audio_playback_device.cpp  catalog_cache.cpp  client_app.cpp  controller_manager.cpp  game_filter.cpp  gstreamer_media_pipeline.cpp  gstreamer_media_receiver.cpp  gstreamer_probe.cpp  gstreamer_synced_media_session.cpp  gui.cpp  input_sender.cpp  posix_gstreamer_media_platform.cpp  sdl2_controller_backend.cpp  session_client.cpp  session_service.cpp  windows_gstreamer_media_platform.cpp
src/common/: addresses.cpp  art_transfer.cpp  catalog_presenter.cpp  cli_common.cpp  controller_normalization.cpp  discovery.cpp  game_assets.cpp  participant_role.cpp  protocol.cpp  serialization.cpp  sha256.cpp  steam_art_import.cpp  time.cpp
src/common/platform/: paths.cpp  posix_process.cpp  posix_socket.cpp  process_utils.cpp  windows_process.cpp  windows_socket.cpp
src/gui/: game_picker_widget.cpp  game_picker_widget.hpp  game_selection_dialog.cpp  game_selection_dialog.hpp  host_picker_widget.cpp  host_picker_widget.hpp  host_search_dialog.cpp  host_search_dialog.hpp
src/host/: game_catalog.cpp  game_catalog_scanner.cpp  gpu_select.cpp  gstreamer_media_server.cpp  host_app.cpp  host_app_config.cpp  host_launch_planner.cpp  host_session_helpers.cpp  input_router.cpp  libretro_core_registry.cpp  linux_uinput_gamepad.cpp  local_controller_bridge.cpp  network_input_receiver.cpp  posix_retroarch_process.cpp  retroarch_config_writer.cpp  retroarch_resolve.cpp  save_profile.cpp  seat_manager.cpp  session_control_monitor.cpp  session_lobby.cpp  session_service.cpp  virtual_joypad_resolve.cpp
src/tools/: archstreamer_gui.cpp  asset_probe.cpp  cli_client.cpp  cli_host.cpp  client_catalog_probe.cpp  controller_probe.cpp  game_catalog_probe.cpp  host_runner.cpp  host_runner_main.cpp  session_client.cpp  session_client_app.cpp  session_client_cli.cpp  session_client_main.cpp  steam_art_import.cpp  uinput_probe.cpp
